# haskell-reader-example

./: CHANGELOG.md  README.md  haskell-reader-example.cabal
app/: AppM.hs  Main.hs
resources/: tamerlane.txt
