cabal-version:      2.4
name:               haskell-reader-example
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Nathaniel May
maintainer:         nathaniel.may@fishtownanalytics.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable haskell-reader-example
    main-is:          Main.hs
    other-modules:    AppM

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , mtl ^>=2.3.1
                    , strict ^>=0.4.0.1
                    , time ^>=1.11.1.1
                    , transformers ^>=0.6.0.6
    hs-source-dirs:   app
    default-language: Haskell2010
